--- a/index.html
+++ b/index.html
@@ -1,29 +1,117 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Yad B Yad</title>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Yad B Yad</title>
 
-        <!--  font  -->
-        <link href="https://fonts.googleapis.com/css2?family=Inter&display=swap"
-            rel="stylesheet">
+    <!--  font  -->
+    <link
+      href="https://fonts.googleapis.com/css2?family=Inter&display=swap"
+      rel="stylesheet"
+    />
 
-        <!--  Bootstrab  -->
-        <link
-            href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/css/bootstrap.min.css"
-            rel="stylesheet"
-            integrity="sha384-4Q6Gf2aSP4eDXB8Miphtr37CMZZQ5oXLH2yaXMJ2w8e2ZtHTl7GptT4jmndRuHDT"
-            crossorigin="anonymous">
-        <!-- style sheet -->
-        <link href="style.css" rel="stylesheet">
-        
-    </head>
-    <body>
+    <!--  Bootstrab  -->
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-4Q6Gf2aSP4eDXB8Miphtr37CMZZQ5oXLH2yaXMJ2w8e2ZtHTl7GptT4jmndRuHDT"
+      crossorigin="anonymous"
+    />
+    <!-- style sheet -->
+    <link href="style.css" rel="stylesheet" />
+  </head>
+  <body>
+    <!-- start home section  -->
+    <section class="home">
+      <div class="container home__container">
+        <!-- start header  -->
+        <header class="home__header">
+          <div class="home__header__logo">
+            <a href="#">
+              <img src="./assets/logo.svg" alt="logo image" />
+            </a>
+          </div>
 
-        <script
-            src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/js/bootstrap.bundle.min.js"
-            integrity="sha384-j1CDi7MgGQ12Z7Qab0qlWQ/Qqz24Gc6BM0thvEMVjHnfYGF0rmFCozFSxQBxwHKO"
-            crossorigin="anonymous"></script>
-    </body>
+          <nav class="home__header__nav">
+            <ul class="nav">
+              <li class="nav-item">
+                <a class="nav-link active" aria-current="page" href="#">Home</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#">Explore</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#">Campaigns</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" aria-disabled="true">Profile</a>
+              </li>
+
+              <input type="search" placeholder="Search" />
+            </ul>
+          </nav>
+        </header>
+
+        <!-- start body  -->
+        <div class="home__body">
+          <div class="home__body__text">
+            <h1>Make an impact to the world.</h1>
+            <p>
+              We’re offer complete solution to launch your social movements.
+            </p>
+          </div>
+
+          <div class="home__body__img">
+            <img src="./assets/home-img-bg.svg" alt="" class="img-bg" />
+            <img src="./assets/home-img.svg" alt="" class="image" />
+          </div>
+        </div>
+      </div>
+    </section>
+    <!-- end home section  -->
+
+    <!-- start login section  -->
+    <section class="login">
+      <div class="container">
+        <div class="row">
+          <div class="col-md-6 p-0">
+            <div class="login__left">
+              <div class="login__icon">
+                <img src="./assets/left-icon.svg" alt="" />
+              </div>
+              <h3 class="login__h3">Activists</h3>
+              <p class="login__p">
+                We help you easy start your campaign, collect donations,
+                signatures. You can manage your campaign updates and your
+                supporters on dashboard.
+              </p>
+              <button class="login__leftBtn">Start a Campaign</button>
+            </div>
+          </div>
+          <div class="col-md-6 p-0">
+            <div class="login__right">
+              <div class="login__icon">
+                <img src="./assets/right-icon.svg" alt="" />
+              </div>
+              <h3 class="login__h3">Supporters</h3>
+              <p class="login__p">
+                Help the campaigns achieve their goals. Make the world better by
+                signing, sharing and donating to spread good values to the
+                community.
+              </p>
+              <button class="login__rightBtn">Sign the petition</button>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+    <!-- end login section  -->
+
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-j1CDi7MgGQ12Z7Qab0qlWQ/Qqz24Gc6BM0thvEMVjHnfYGF0rmFCozFSxQBxwHKO"
+      crossorigin="anonymous"
+    ></script>
+  </body>
 </html>
