--- a/index.html
+++ b/index.html
@@ -5,19 +5,33 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Yad B Yad</title>
 
-    <!--  font  -->
+    <!-- google font -->
     <link
       href="https://fonts.googleapis.com/css2?family=Inter&display=swap"
       rel="stylesheet"
     />
 
-    <!--  Bootstrab  -->
+    <!-- Bootstrap -->
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/css/bootstrap.min.css"
       rel="stylesheet"
       integrity="sha384-4Q6Gf2aSP4eDXB8Miphtr37CMZZQ5oXLH2yaXMJ2w8e2ZtHTl7GptT4jmndRuHDT"
       crossorigin="anonymous"
     />
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap-icons/font/bootstrap-icons.css"
+      rel="stylesheet"
+    />
+
+    <!-- font awesome  -->
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css"
+      integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
+
     <!-- style sheet -->
     <link href="style.css" rel="stylesheet" />
   </head>
@@ -29,7 +43,7 @@
         <header class="home__header">
           <div class="home__header__logo">
             <a href="#">
-              <img src="./assets/logo.svg" alt="logo image" />
+              <img src=".//assets/icon/logo.svg" alt="logo image" />
             </a>
           </div>
 
@@ -47,10 +61,13 @@
               <li class="nav-item">
                 <a class="nav-link" aria-disabled="true">Profile</a>
               </li>
-
-              <input type="search" placeholder="Search" />
             </ul>
           </nav>
+
+          <div class="home__header__nav__search__icon">
+            <i class="fa-solid fa-magnifying-glass search__icon"></i>
+            <input type="search" placeholder="Search" />
+          </div>
         </header>
 
         <!-- start body  -->
@@ -63,10 +80,14 @@
           </div>
 
           <div class="home__body__img">
-            <img src="./assets/home-img-bg.svg" alt="" class="img-bg" />
-            <img src="./assets/home-img.svg" alt="" class="image" />
+            <img src="./assets/image/home-img-bg.svg" alt="" class="img-bg" />
+            <img src="./assets/image/home-img.svg" alt="" class="image" />
           </div>
         </div>
+
+        <a href="#" class="home__go-down">
+          <i class="fa-solid fa-angles-down fa-2x"></i>
+        </a>
       </div>
     </section>
     <!-- end home section  -->
@@ -78,7 +99,7 @@
           <div class="col-md-6 p-0">
             <div class="login__left">
               <div class="login__icon">
-                <img src="./assets/left-icon.svg" alt="" />
+                <img src="./assets/icon/activists-icon.svg" alt="" />
               </div>
               <h3 class="login__h3">Activists</h3>
               <p class="login__p">
@@ -89,10 +110,11 @@
               <button class="login__leftBtn">Start a Campaign</button>
             </div>
           </div>
+
           <div class="col-md-6 p-0">
             <div class="login__right">
               <div class="login__icon">
-                <img src="./assets/right-icon.svg" alt="" />
+                <img src="./assets/icon/supporters-icon.svg" alt="" />
               </div>
               <h3 class="login__h3">Supporters</h3>
               <p class="login__p">
@@ -107,6 +129,74 @@
       </div>
     </section>
     <!-- end login section  -->
+
+    <!-- Start campaign -->
+    <section class="campaign">
+      <div class="container">
+        <div class="campaign__head">
+          <h1>Start your campaign today</h1>
+          <p>
+            Campoal has a variety of features that make it the best place to
+            start a petition.
+          </p>
+        </div>
+
+        <div class="campaign__body">
+          <div class="row">
+            <div class="col-md-6">
+              <div class="campaign__body__box">
+                <div class="campaign__body__box__img">
+                  <img src="assets/icon/manage-icon.png" alt="" />
+                </div>
+
+                <div class="campaign__body__box__text">
+                  <h3>Manage your campaigns</h3>
+                  <p>
+                    Track how many people signed the petition by week, month,
+                    year.
+                  </p>
+                </div>
+              </div>
+
+              <div class="campaign__body__box">
+                <div class="campaign__body__box__img">
+                  <img src="assets/icon/donation-icon.png" alt="" />
+                </div>
+
+                <div class="campaign__body__box__text">
+                  <h3>Collecting donation</h3>
+                  <p>
+                    Campaign owners can set up donations to receive donations
+                    from supporters.
+                  </p>
+                </div>
+              </div>
+
+              <div class="campaign__body__box">
+                <div class="campaign__body__box__img">
+                  <img src="assets/icon/export-icon.png" alt="" />
+                </div>
+
+                <div class="campaign__body__box__text">
+                  <h3>Export Signature</h3>
+                  <p>
+                    Download the signatures of supporters and submit to the
+                    decision makers.
+                  </p>
+                </div>
+              </div>
+            </div>
+
+            <div class="col-md-6">
+              <div class="campaign__body__img">
+                <img src="assets/image/campaign-img.png" alt="campaign image" />
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+    <!-- end campaign -->
 
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/js/bootstrap.bundle.min.js"
