create footer explore html css

--- a/explore-page.html
+++ b/explore-page.html
@@ -16,6 +16,7 @@
             crossorigin="anonymous">
         <!-- style sheet -->
         <link href="style.css" rel="stylesheet">
+        <link href="footer-explore-style.css" rel="stylesheet">
     </head>
     <body>
         <main class="container">
@@ -133,6 +134,23 @@
                     </div>
                 </div>
             </main>
+
+            <footer class="d-flex justify-content-center ">
+                <nav class="pagination-container">
+                    <div class="pagination">
+                        <a class="pagination-newer" href="#">PREV</a>
+                        <span class="pagination-inner">
+                            <a href="#">1</a>
+                            <a class="pagination-active" href="#">2</a>
+                            <a href="#">3</a>
+                            <a href="#">4</a>
+                            <a href="#">5</a>
+                            <a href="#">6</a>
+                        </span>
+                        <a class="pagination-older" href="#">NEXT</a>
+                    </div>
+                </nav>
+            </footer>
 
         </main>
     </body>
