add footer to home

--- a/index.html
+++ b/index.html
@@ -216,6 +216,55 @@
     </section>
     <!-- end campaign -->
 
+    <!-- start footer -->
+    <footer class="footer pt-3">
+      <div class="container">
+        <div class="row text-center text-md-start">
+          <div class="col-md-5 mb-4">
+            <h6 class="fw-bold py-3">What is Campoal?</h6>
+            <p>
+              Campoal is a completed WordPress theme used to create Petition
+              Platform, Foundation and Non-profit website where anyone can be
+              start a social movement, collect supporters and fundraising to
+              change something in society.
+            </p>
+          </div>
+
+          <div class="col-md-3 mb-4">
+            <h6 class="col-md-3 fw-bold py-1">Home</h6>
+            <h6 class="col-md-3 fw-bold py-1">Explore</h6>
+            <h6 class="col-md-3 fw-bold py-1">Campaigns</h6>
+            <h6 class="col-md-3 fw-bold py-1">Profile</h6>
+          </div>
+
+          <div class="col-md-4 mb-4">
+            <div class="mb-2">
+              <i class="fa-solid fa-location-dot fs-5 p-2"></i>
+              7480 Mockingbird Hill undefined
+            </div>
+
+            <div class="mb-3">
+              <i class="fa-solid fa-mobile fs-5 p-2"></i>
+              (239) 555-0108
+            </div>
+
+            <div class="social-icons">
+              <a href="#" class="p-2 fs-5"
+                ><i class="fa-brands fa-threads"></i
+              ></a>
+              <a href="#" class="p-2 fs-5"
+                ><i class="fa-brands fa-x-twitter"></i
+              ></a>
+              <a href="#" class="p-2 fs-5"
+                ><i class="fa-brands fa-square-threads"></i
+              ></a>
+            </div>
+          </div>
+        </div>
+      </div>
+    </footer>
+    <!-- end footer -->
+
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-j1CDi7MgGQ12Z7Qab0qlWQ/Qqz24Gc6BM0thvEMVjHnfYGF0rmFCozFSxQBxwHKO"
