--- a/explore-page.html
+++ b/explore-page.html
@@ -19,7 +19,7 @@
         <link href="footer-explore-style.css" rel="stylesheet">
     </head>
     <body>
-        <main class="container">
+        <main class="container" id="explore">
 
             <header class="container row">
                 <div class="col-lg-10 col-md-7 col-6 ">
