--- a/index.html
+++ b/index.html
@@ -46,12 +46,12 @@
   </head>
   <body>
     <!-- start home section  -->
-    <section class="home">
+    <section class="home" id="home">
       <div class="container home__container">
         <!-- start header  -->
         <header class="home__header">
           <div class="home__header__logo">
-            <a href="#">
+            <a href="#home">
               <img src=".//assets/icon/logo.svg" alt="logo image" />
             </a>
           </div>
@@ -60,18 +60,18 @@
             <div class="menu-wrapper">
               <ul class="nav">
                 <li class="nav-item">
-                  <a class="nav-link active" aria-current="page" href="#"
+                  <a class="nav-link active" aria-current="page" href="#home"
                     >Home</a
                   >
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="#">Explore</a>
+                  <a class="nav-link" href="#explore">Explore</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="#">Campaigns</a>
+                  <a class="nav-link" href="#campaign">Campaigns</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" aria-disabled="true">Profile</a>
+                  <a class="nav-link" aria-disabled="true" href="#">Profile</a>
                 </li>
               </ul>
             </div>
@@ -103,7 +103,7 @@
           </div>
         </div>
 
-        <a href="#" class="home__go-down">
+        <a href="#home" class="home__go-down">
           <i class="fa-solid fa-angles-down fa-2x"></i>
         </a>
       </div>
@@ -111,7 +111,7 @@
     <!-- end home section  -->
 
     <!-- start login section  -->
-    <section class="login">
+    <section class="login" id="login">
       <div class="container">
         <div class="row">
           <div class="col-md-6 p-0">
@@ -149,7 +149,7 @@
     <!-- end login section  -->
 
     <!-- Start campaign -->
-    <section class="campaign">
+    <section class="campaign" id="campaign">
       <div class="container">
         <div class="campaign__head">
           <h1>Start your campaign today</h1>
