create logic explore and details

--- a/public/campaign-details-page.html
+++ b/public/campaign-details-page.html
@@ -23,7 +23,7 @@
         <main class="container">
 
             <header class="container">
-                <p class="font-black-600-30">Help me Fight Cancer</p>
+                <p id="titleCampaign" class="font-black-600-30">Help me Fight Cancer</p>
             </header>
 
             <main class="container">
@@ -31,7 +31,7 @@
                     <div class=" col-lg-8">
                         <img class="container rounded-3 p-0"
                             src="./assets/image/imgCard.svg">
-                        <p
+                        <p id="descriptionCampaign"
                             class="container font-gray-400-16 white-space-preline">
                             In 2022 my husband and I moved to Portugal to follow
                             our simple life dream and build our home a homestead
@@ -52,7 +52,7 @@
                                     <img src="assets/icon/person.svg">
                                 </div>
                                 <div class="col-3 mt-3">
-                                    <p class="font-black-600-18  mb-0">
+                                    <p id="userCampaign" class="font-black-600-18  mb-0">
                                         Olivia Rhye </p>
                                     <p class="font-gray-400-16">
                                         Egypt
@@ -70,17 +70,17 @@
                             </p>
                             <div class="card-body">
                                 <div class="row justify-content-center">
-                                    <p class=" font-black-600-18">
+                                    <p id="goalCampaign" class=" font-black-600-18">
                                         $15.000 / $20.000
                                     </p>
                                 </div>
-                                <progress class="progress " max="100"
+                                <progress id="progressCampaign" class="progress " max="100"
                                     value="50"></progress>
-                                <p class="font-gray-400-16 m-1">
+                                <p id="donationsCampaign" class="font-gray-400-16 m-1">
                                     185 Donations
                                 </p>
-                                <div class="container">
-                                    <div class="row align-items-center">
+                                <div id="divDonations" class="container">
+                                    <!-- <div class="row align-items-center">
                                         <div
                                             class="col-6 rounded-5 div--icon-person ">
                                             <img src="assets/icon/person.svg">
@@ -93,63 +93,8 @@
                                             </p>
                                         </div>
 
-                                    </div>
-                                    <div class="row align-items-center">
-                                        <div
-                                            class="col-6 rounded-5 div--icon-person ">
-                                            <img src="assets/icon/person.svg">
-                                        </div>
-                                        <div class="col mt-3">
-                                            <p class="font-black-600-18  mb-0">
-                                                Olivia Rhye </p>
-                                            <p class="font-black-600-14">
-                                                $39.03
-                                            </p>
-                                        </div>
-
-                                    </div>
-                                    <div class="row align-items-center">
-                                        <div
-                                            class="col-6 rounded-5 div--icon-person ">
-                                            <img src="assets/icon/person.svg">
-                                        </div>
-                                        <div class="col mt-3">
-                                            <p class="font-black-600-18  mb-0">
-                                                Olivia Rhye </p>
-                                            <p class="font-black-600-14">
-                                                $39.03
-                                            </p>
-                                        </div>
-
-                                    </div>
-                                    <div class="row align-items-center">
-                                        <div
-                                            class="col-6 rounded-5 div--icon-person ">
-                                            <img src="assets/icon/person.svg">
-                                        </div>
-                                        <div class="col mt-3">
-                                            <p class="font-black-600-18  mb-0">
-                                                Olivia Rhye </p>
-                                            <p class="font-black-600-14">
-                                                $39.03
-                                            </p>
-                                        </div>
-
-                                    </div>
-                                    <div class="row align-items-center">
-                                        <div
-                                            class="col-6 rounded-5 div--icon-person ">
-                                            <img src="assets/icon/person.svg">
-                                        </div>
-                                        <div class="col mt-3">
-                                            <p class="font-black-600-18  mb-0">
-                                                Olivia Rhye </p>
-                                            <p class="font-black-600-14">
-                                                $39.03
-                                            </p>
-                                        </div>
-
-                                    </div>
+                                    </div> -->
+                                    
                                 </div>
                             </div>
 
@@ -177,5 +122,6 @@
             </main>
 
         </main>
+        <script type="module" src ="campaign-details-main.js"></script>
     </body>
 </html>
