--- a/public/explore-page.html
+++ b/public/explore-page.html
@@ -39,9 +39,10 @@
             </header>
 
             <main class="container ">
-                <div class="row justify-content-start">
+                <div id="divCards" class="row justify-content-start">
 
-                    <div class="col-12 col-md-6 col-lg-4">
+                    <div  class="col-12 col-md-6 col-lg-4">
+        
                         <div class="card size-card">
                             <img src="./assets/image/imgCard.svg"
                                 class="card-img-top">
@@ -71,15 +72,13 @@
                                 </div>
                             </div>
                         </div>
-                    </div>
-
-                    <div class="col-12 col-md-6 col-lg-4">
                         <div class="card size-card">
                             <img src="./assets/image/imgCard.svg"
                                 class="card-img-top">
                             <div class="card-body">
                                 <p class="card-title font-black-600-24">
-                                    Ms. Saint-Martin Doranyia
+                                    Ms. Saint-Martin Doranyia Pascal lkdmzklfk
+                                    lznslfnzs nfdnfjlznsdjnkzjl
                                 </p>
                                 <p
                                     class="card-text text-truncate font-gray-400-16">
@@ -102,42 +101,12 @@
                                 </div>
                             </div>
                         </div>
-                    </div>
-
-                    <div class="col-12 col-md-6 col-lg-4">
-                        <div class="card size-card">
-                            <img src="./assets/image/imgCard.svg"
-                                class="card-img-top">
-                            <div class="card-body">
-                                <p class="card-title font-black-600-24">
-                                    Ms. Saint-Martin Doranyia Pascal
-                                </p>
-                                <p
-                                    class="card-text text-truncate font-gray-400-16">
-                                    Hi This is your Miss Teen Carnival 2022
-                                    Doranyia
-                                    Pascal I will be representing Saint
-                                    Martin...
-                                </p>
-                                <progress class="progress" max="100"
-                                    value="50"></progress>
-                                <div
-                                    class="d-flex justify-content-between mt-2">
-                                    <div class="d-flex align-items-center">
-                                        <img class="w-25 icon-card"
-                                            src="./assets/icon/gift.svg">
-                                        <p
-                                            class="font-black-500-16 m-1">$8000</p>
-                                    </div>
-                                    <p class="font-black-500-16 m-1">%50</p>
-                                </div>
-                            </div>
-                        </div>
+                        
                     </div>
                 </div>
             </main>
 
-            <footer class="d-flex justify-content-center ">
+            <!-- <footer class="d-flex justify-content-center ">
                 <nav class="pagination-container">
                     <div class="pagination">
                         <a class="pagination-newer" href="#">PREV</a>
@@ -152,8 +121,9 @@
                         <a class="pagination-older" href="#">NEXT</a>
                     </div>
                 </nav>
-            </footer>
+            </footer> -->
 
         </main>
+        <script type="module" src="explore-page-main.js"></script>
     </body>
 </html>
