--- a/public/login.html
+++ b/public/login.html
@@ -51,13 +51,14 @@
             <div
               class="d-flex align-items-center h-custom-2 px-5 ms-xl-4 mt-5 pt-5 pt-xl-0 mt-xl-n5"
             >
-              <form style="width: 23rem">
+              <form id="loginForm" style="width: 23rem">
                 <h3
                   class="fw-normal mb-3 pb-3 logIn__head"
                   style="letter-spacing: 1px"
                 >
                   Log In
                 </h3>
+                <div class="alert alert-warning" role="alert"></div>
 
                 <div data-mdb-input-init class="form-outline mb-4">
                   <label class="form-label" for="mail">Email address</label>
@@ -79,18 +80,15 @@
 
                 <div class="pt-1 mb-4">
                   <button
+                    id="btnSubmit"
                     data-mdb-button-init
                     data-mdb-ripple-init
                     class="btn btn-info btn-lg btn-block logIn__btn"
-                    type="button"
+                    type="submit"
                   >
                     Login
                   </button>
                 </div>
-
-                <p class="small mb-5 pb-lg-2">
-                  <a class="text-muted" href="#!">Forgot password?</a>
-                </p>
 
                 <p class="logIn__register">
                   Don't have an account?
@@ -100,14 +98,15 @@
             </div>
           </div>
 
-          <div class="col-sm-6 px-0 d-none d-sm-block">
+          <div class="col-md-6 px-0 d-none d-sm-block">
             <div class="logIn__img">
-              <img src="assets/image/logIn-img.jpg" alt="login image" />
+              <img src="assets/image/logIn-img.png" alt="login image" />
             </div>
           </div>
         </div>
       </div>
     </section>
     <!-- end logIn  -->
+    <script type="module" src="logIn.js"></script>
   </body>
 </html>
