--- a/public/compaignDashBoard.html
+++ b/public/compaignDashBoard.html
@@ -6,8 +6,7 @@
     <title>Campaign Dashboard</title>
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
-      rel="stylesheet"
-    />
+      rel="stylesheet" />
     <link rel="stylesheet" href="style.css" />
     <link rel="stylesheet" href="yourCompaign-dashboard.css" />
   </head>
@@ -24,11 +23,6 @@
 
           <nav class="home__header__nav" id="navbarNav">
             <ul class="nav">
-              <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="#"
-                  >Dashboard</a
-                >
-              </li>
               <li class="nav-item">
                 <a class="nav-link" href="#">Your Campaign</a>
               </li>
@@ -47,46 +41,23 @@
       <div class="container py-5">
         <div class="dashboard__active">
           <div
-            class="dashboard__active__header d-flex justify-content-between align-items-center mb-3"
-          >
-            <h2 class="section-title">
-              3 Active <span class="text-dark">Campaigns</span>
+            class="dashboard__active__header d-flex  align-items-center mb-3">
+            <h2 id="countCampaigns" class="section-title mx-1">
+              3 
             </h2>
-            <button class="btn btn-primary">+ Start Campaign</button>
+            <h2  class="section-title">  Active</h2>
+            <h2 class="mx-1 text-dark">Campaigns</h2>
           </div>
 
-          <div class="row g-4 mb-5 dashboard__active__body">
-            <div class="col-md-4">
-              <div class="dashboard__active__card card shadow-lg">
-                <img
-                  src="./assets/image/your-campaign.png"
-                  class="card-img-top"
-                  alt="EV Startup"
-                />
-                <div class="card-body">
-                  <h5 class="card-title">
-                    Raising Capital for inhouse EV Startup
-                  </h5>
+          <div id="divCampaigns" class="row g-4 mb-5 dashboard__active__body">
 
-                  <p class="campaign-info">
-                    A unique Concept EV for everyday transport, leisure & Biking
-                    fun
-                  </p>
-
-                  <div class="d-flex justify-content-between my-2">
-                    <span class="badge">Raised: $5000</span>
-                    <small>Investor: 50</small>
-                  </div>
-
-                  <small class="text-muted">Remaining Days: 184</small>
-                </div>
-              </div>
-            </div>
           </div>
         </div>
       </div>
     </section>
     <!-- end Dashboard  -->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+      <script type="module" src="campain-dashbord-main.js"></script>
   </body>
 </html>
