--- a/public/createCampaign.html
+++ b/public/createCampaign.html
@@ -52,8 +52,8 @@
           <h2 class="mb-4">Start a Campaign</h2>
           <p>Add necessary Details , Images & Proof of concept</p>
         </div>
-
-        <form>
+        <div class="alert alert-success" role="alert"></div>
+        <form id="createCampaignForm" class="mt-4">
           <div class="row mb-3">
             <div class="col-md-6">
               <label for="campaignTitle" class="form-label"
@@ -89,37 +89,15 @@
             ></textarea>
           </div>
 
-          <div class="mb-3">
-            <label for="story" class="form-label">Story</label>
-            <textarea
-              class="form-control"
-              id="story"
-              rows="3"
-              placeholder="Tell your story e.g. how you will breakthrough or outgrow the competition & surpass all challenges."
-            ></textarea>
-          </div>
+          
 
           <div class="row mb-4">
-            <div class="col-md-6">
+            <div class="col">
               <label class="form-label">Upload Cover Image</label>
               <div class="upload-box">
                 <i class="bi bi-upload"></i><br />
                 1087 × 290 px<br />
-                <input type="file" class="form-control mt-2" accept="image/*" />
-              </div>
-            </div>
-
-            <div class="col-md-6">
-              <label class="form-label">Upload Video</label>
-              <div class="upload-box py-2">
-                <i class="bi bi-camera-video"></i><br />
-                Upload Video<br />
-                <small>mp4, m4a, mkv</small><br />
-                <input
-                  type="file"
-                  class="form-control mt-2"
-                  accept=".mp4, .m4a, .mkv"
-                />
+                <input id="campaignImg" type="file" class="form-control mt-2" accept="image/*" />
               </div>
             </div>
           </div>
@@ -134,56 +112,14 @@
                 placeholder="Enter goal amount"
               />
             </div>
-
             <div class="col-md-6">
-              <label for="raisedAmount" class="form-label"
-                >Raised Amount till now</label
-              >
-              <input
-                type="number"
-                class="form-control"
-                id="raisedAmount"
-                placeholder="Enter raised amount"
-              />
+              <label for="endDate" class="form-label">Deadline Date</label>
+              <input type="date" class="form-control" id="deadlineDate" />
             </div>
+
+           
           </div>
-
-          <div class="row mb-3">
-            <div class="col-md-6">
-              <label for="startDate" class="form-label">Start Date</label>
-              <input type="date" class="form-control" id="startDate" />
-            </div>
-
-            <div class="col-md-6">
-              <label for="endDate" class="form-label">End Date</label>
-              <input type="date" class="form-control" id="endDate" />
-            </div>
-          </div>
-
-          <div class="row mb-4">
-            <div class="col-md-6">
-              <label for="country" class="form-label">Country</label>
-              <select class="form-select" id="country">
-                <option selected>Choose...</option>
-                <option>USA</option>
-                <option>India</option>
-                <option>UK</option>
-                <option>Canada</option>
-              </select>
-            </div>
-
-            <div class="col-md-6">
-              <label for="currency" class="form-label">Currency Type</label>
-              <select class="form-select" id="currency">
-                <option selected>Choose...</option>
-                <option>USD</option>
-                <option>INR</option>
-                <option>EUR</option>
-              </select>
-            </div>
-          </div>
-
-          <button type="submit" class="btn btn-primary w-100">
+          <button type="submit" class="btn btn-primary mt-5">
             Publish Campaign
           </button>
         </form>
@@ -191,5 +127,6 @@
     </section>
     <!-- end create campaign -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+    <script type="module" src="createCampaign-main.js"></script>
   </body>
 </html>
