--- a/public/yourCompaign.html
+++ b/public/yourCompaign.html
@@ -49,14 +49,14 @@
           class="yourCampaigns__detailsheader d-flex justify-content-between align-items-center mb-3"
         >
           <div>
-            <h3>Fundraising for EV Startup</h3>
+            <h3 id="titleCampaign">Fundraising for EV Startup</h3>
             <p>You can Check Campaigns Details here!</p>
           </div>
 
           <div>
             <h5>
               Total Balance
-              <strong class="yourCampaigns__detailsheader__totalPrice"
+              <strong id="countDonations" class="yourCampaigns__detailsheader__totalPrice"
                 >$50,000</strong
               >
             </h5>
@@ -72,23 +72,21 @@
           />
 
           <div class="card-body">
-            <h5 class="card-title">Raising Capital for inhouse EV Startup</h5>
-            <p class="card-text">
+            <h5 id="titleCampaign2" class="card-title">Raising Capital for inhouse EV Startup</h5>
+            <p id="descriptionCampaign" class="card-text">
               A unique Concept EV for everyday transport, leisure & Biking fun.
               We have official dec send to investor with more details.
             </p>
 
-            <div class="row">
-              <div class="col-md-6">
-                <span>Raise $3000</span>
-              </div>
-              <div class="col-md-6 text-end">
-                <span class="raiseOf badge px-3 py-2">Raised of $5000</span>
+            <div class="row f-end ">
+              
+              <div class="col-md-12 text-end">
+                <span id="goaleCampaign" class="raiseOf badge px-3 py-2">Raised of $5000</span>
               </div>
             </div>
             <div class="mt-3 d-flex justify-content-between text-muted">
-              <p>Investor: <strong>05</strong></p>
-              <p>Remaining Days: <strong>184</strong></p>
+              <p>Investor: <strong id="donateCampaign">05</strong></p>
+              <p>Deadline: <strong id="deadlineCampaign">2025-5-30</strong></p>
             </div>
           </div>
         </div>
@@ -99,8 +97,8 @@
             Your Campaign Backed by following investor
           </h5>
 
-          <div class="investorList__listGroup">
-            <div
+          <div id="divInvestor" class="investorList__listGroup">
+            <!-- <div
               class="list-group-item investor-card d-flex justify-content-between align-items-center mb-2"
             >
               <div class="d-flex align-items-center">
@@ -122,11 +120,12 @@
                 <h6 class="price">$2500</h6>
                 <small class="text-muted">Invested Amt</small>
               </div>
-            </div>
+            </div> -->
           </div>
         </div>
       </div>
     </section>
     <!-- end your campaigns  -->
+     <script type="module" src="yourCampaign-main.js"></script>
   </body>
 </html>
