--- a/public/profile.html
+++ b/public/profile.html
@@ -46,6 +46,39 @@
     <link href="footer-explore-style.css" rel="stylesheet" />
   </head>
   <body>
+    <!-- start header -->
+    <header>
+      <div class="container">
+        <header class="home__header">
+          <div class="home__header__logo">
+            <a href="http://localhost:3000/">
+              <img src="./assets/icon/logo.svg" alt="logo image" />
+            </a>
+          </div>
+
+          <nav class="home__header__nav" id="navbarNav">
+            <ul class="nav">
+              <li class="nav-item">
+                <a
+                  class="nav-link"
+                  href="http://localhost:3000/yourCompaign.html"
+                  >Your Campaign</a
+                >
+              </li>
+              <li class="nav-item">
+                <a
+                  class="nav-link"
+                  href="http://localhost:3000/createCampaign.html"
+                  >Create Campaign</a
+                >
+              </li>
+            </ul>
+          </nav>
+        </header>
+      </div>
+    </header>
+    <!-- end header -->
+
     <!-- start profile  -->
     <section class="profile">
       <div class="container">
@@ -54,7 +87,9 @@
             <img src="assets/icon/person.svg" alt="Avatar" class="avatar" />
             <div class="profile__header__info__text">
               <h5 id="profileName" class="mb-0">Alexa Rawles</h5>
-              <small id="profileEmail" class="text-muted">alexarawles@gmail.com</small>
+              <small id="profileEmail" class="text-muted"
+                >alexarawles@gmail.com</small
+              >
             </div>
           </div>
           <button class="btn edit-btn">Edit</button>
