--- a/public/compaignDashBoard.html
+++ b/public/compaignDashBoard.html
@@ -6,7 +6,8 @@
     <title>Campaign Dashboard</title>
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
-      rel="stylesheet" />
+      rel="stylesheet"
+    />
     <link rel="stylesheet" href="style.css" />
     <link rel="stylesheet" href="yourCompaign-dashboard.css" />
   </head>
@@ -16,7 +17,7 @@
       <div class="container">
         <header class="home__header">
           <div class="home__header__logo">
-            <a href="#home">
+            <a href="http://localhost:3000/">
               <img src="./assets/icon/logo.svg" alt="logo image" />
             </a>
           </div>
@@ -24,10 +25,18 @@
           <nav class="home__header__nav" id="navbarNav">
             <ul class="nav">
               <li class="nav-item">
-                <a class="nav-link" href="#">Your Campaign</a>
+                <a
+                  class="nav-link"
+                  href="http://localhost:3000/yourCompaign.html"
+                  >Your Campaign</a
+                >
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#">Create Campaign</a>
+                <a
+                  class="nav-link"
+                  href="http://localhost:3000/createCampaign.html"
+                  >Create Campaign</a
+                >
               </li>
             </ul>
           </nav>
@@ -40,24 +49,21 @@
     <section class="dashboard">
       <div class="container py-5">
         <div class="dashboard__active">
-          <div
-            class="dashboard__active__header d-flex  align-items-center mb-3">
-            <h2 id="countCampaigns" class="section-title mx-1">
-              3 
-            </h2>
-            <h2  class="section-title">  Active</h2>
+          <div class="dashboard__active__header d-flex align-items-center mb-3">
+            <h2 id="countCampaigns" class="section-title mx-1">3</h2>
+            <h2 class="section-title">Active</h2>
             <h2 class="mx-1 text-dark">Campaigns</h2>
           </div>
 
-          <div id="divCampaigns" class="row g-4 mb-5 dashboard__active__body">
-
-          </div>
+          <div
+            id="divCampaigns"
+            class="row g-4 mb-5 dashboard__active__body"
+          ></div>
         </div>
       </div>
     </section>
     <!-- end Dashboard  -->
-    <script
-      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
-      <script type="module" src="campain-dashbord-main.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+    <script type="module" src="campain-dashbord-main.js"></script>
   </body>
 </html>
