--- a/public/yourCompaign.html
+++ b/public/yourCompaign.html
@@ -17,7 +17,7 @@
       <div class="container">
         <header class="home__header">
           <div class="home__header__logo">
-            <a href="#home">
+            <a href="http://localhost:3000">
               <img src="./assets/icon/logo.svg" alt="logo image" />
             </a>
           </div>
@@ -25,15 +25,27 @@
           <nav class="home__header__nav" id="navbarNav">
             <ul class="nav">
               <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="#"
-                  >Dashboard</a
+                <a
+                  class="nav-link"
+                  href="http://localhost:3000/yourCompaign.html"
+                  >Your Campaign</a
                 >
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#">Your Campaign</a>
+                <a
+                  class="nav-link active"
+                  aria-current="page"
+                  href="http://localhost:3000/dashboard-admin-page.html"
+                  >Dashboard</a
+                >
               </li>
+
               <li class="nav-item">
-                <a class="nav-link" href="#">Create Campaign</a>
+                <a
+                  class="nav-link"
+                  href="http://localhost:3000/createCampaign.html"
+                  >Create Campaign</a
+                >
               </li>
             </ul>
           </nav>
@@ -56,7 +68,9 @@
           <div>
             <h5>
               Total Balance
-              <strong id="countDonations" class="yourCampaigns__detailsheader__totalPrice"
+              <strong
+                id="countDonations"
+                class="yourCampaigns__detailsheader__totalPrice"
                 >$50,000</strong
               >
             </h5>
@@ -72,16 +86,19 @@
           />
 
           <div class="card-body">
-            <h5 id="titleCampaign2" class="card-title">Raising Capital for inhouse EV Startup</h5>
+            <h5 id="titleCampaign2" class="card-title">
+              Raising Capital for inhouse EV Startup
+            </h5>
             <p id="descriptionCampaign" class="card-text">
               A unique Concept EV for everyday transport, leisure & Biking fun.
               We have official dec send to investor with more details.
             </p>
 
-            <div class="row f-end ">
-              
+            <div class="row f-end">
               <div class="col-md-12 text-end">
-                <span id="goaleCampaign" class="raiseOf badge px-3 py-2">Raised of $5000</span>
+                <span id="goaleCampaign" class="raiseOf badge px-3 py-2"
+                  >Raised of $5000</span
+                >
               </div>
             </div>
             <div class="mt-3 d-flex justify-content-between text-muted">
@@ -126,6 +143,6 @@
       </div>
     </section>
     <!-- end your campaigns  -->
-     <script type="module" src="yourCampaign-main.js"></script>
+    <script type="module" src="yourCampaign-main.js"></script>
   </body>
 </html>
